--- a/react-native-app/package.json
+++ b/react-native-app/package.json
@@ -8,8 +8,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "eslint-plugin-prettier": "^3.4.0",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
+    "prettier": "^2.3.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
