--- a/react-native-app/package.json
+++ b/react-native-app/package.json
@@ -14,15 +14,23 @@
     "eslint-plugin-prettier": "^3.4.0",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
+    "npm": "^7.18.1",
     "prettier": "^2.3.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-hyperlink": "^0.0.19",
+    "react-native-image-viewing": "^0.2.0",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
-    "react-native-web": "~0.13.12"
+    "react-native-tab-view": "^3.0.1",
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
+    "react-navigation-tabs": "^2.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
