--- a/react-native-app/package.json
+++ b/react-native-app/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/native": "5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "@types/react-native-vector-icons": "^6.4.7",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint-plugin-prettier": "^3.4.0",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
