--- a/react-native-app/package.json
+++ b/react-native-app/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-picker/picker": "^1.16.1",
     "@react-navigation/native": "5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "@types/react-native-vector-icons": "^6.4.7",
@@ -24,6 +25,7 @@
     "react-native-gesture-handler": "~1.10.2",
     "react-native-hyperlink": "^0.0.19",
     "react-native-image-viewing": "^0.2.0",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
