--- a/react-native-app/tsconfig.json
+++ b/react-native-app/tsconfig.json
@@ -1,6 +1,12 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+    "target": "es5",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "jsx": "react-native",
     "strict": true,
     "baseUrl": "./",
     "paths": { "@src/*": ["src/*"] }
