--- a/react-native-app/package.json
+++ b/react-native-app/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-picker/picker": "^1.16.1",
     "@react-navigation/bottom-tabs": "^5.11.11",
+    "@react-navigation/material-top-tabs": "^5.3.15",
     "@react-navigation/native": "5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "@types/react-native-vector-icons": "^6.4.7",
@@ -31,7 +32,7 @@
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
-    "react-native-tab-view": "^3.0.1",
+    "react-native-tab-view": "^2.16.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
