--- a/react-native-app/tsconfig.json
+++ b/react-native-app/tsconfig.json
@@ -6,6 +6,7 @@
     "target": "es5",
     "module": "esnext",
     "moduleResolution": "node",
+    "resolveJsonModule": true,
     "jsx": "react-native",
     "strict": true,
     "baseUrl": "./",
