--- a/react-native-app/package.json
+++ b/react-native-app/package.json
@@ -28,10 +28,12 @@
     "react-native-gesture-handler": "~1.10.2",
     "react-native-hyperlink": "^0.0.19",
     "react-native-image-viewing": "^0.2.0",
+    "react-native-modal": "^12.0.2",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^2.16.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
