--- a/react-native-app/package.json
+++ b/react-native-app/package.json
@@ -26,6 +26,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-hyperlink": "^0.0.19",
     "react-native-image-viewing": "^0.2.0",
     "react-native-modal": "^12.0.2",
