--- a/react-native-app/package.json
+++ b/react-native-app/package.json
@@ -17,9 +17,11 @@
     "@react-navigation/stack": "^5.14.5",
     "@types/react-native-vector-icons": "^6.4.7",
     "babel-plugin-module-resolver": "^4.1.0",
+    "date-fns": "^2.24.0",
     "eslint-plugin-prettier": "^3.4.0",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
+    "firebase": "8.4.3",
     "npm": "^7.18.1",
     "prettier": "^2.3.0",
     "react": "16.13.1",
